--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "frontend/dist"
+        "buildCommand": "npm run build",
+        "outputDirectory": "dist"
       }
     }
   ],
@@ -20,9 +21,10 @@
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/dist/$1"
+      "dest": "frontend/$1"
     }
   ],
   "installCommand": "npm install --prefix backend && npm install --prefix frontend",
+
   "buildCommand": "npm run build --prefix frontend"
 }
