--- a/vercel.json
+++ b/vercel.json
@@ -19,9 +19,10 @@
       "src": "/api/(.*)",
       "dest": "backend/server.js"
     },
+
     {
       "src": "/(.*)",
-      "dest": "frontend/$1"
+      "dest": "frontend/dist/$1"
     }
   ],
   "installCommand": "npm install --prefix backend && npm install --prefix frontend",
